Updated to use JKD17 and multi-stage builds to shrink image size.